--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <!-- logo -->
-            <img class="logo" src="/Images/suresh-logo.png" alt="logo">
+            <img class="logo" src="suresh-logo.png" alt="logo">
             <!-- nav bar -->
             <a href="#About">About me</a>
             <a href="#Services">Services</a>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="circle">
-            <img class="images" src="/Images/suresh11.jpg" alt="suresh kisan">
+            <img class="images" src="suresh11.jpg" alt="suresh kisan">
         </div>
         <div class="heading">
             <h1>Hi I am <br class="br"> Suresh Kisan</h1>
@@ -54,15 +54,15 @@
         </div>
         <div class="what">
             <div class="card">
-                <img src="/Images/Vector.png" alt="web icon">
+                <img src="Vector.png" alt="web icon">
                 <h2>Web Developer</h2>
             </div>
             <div class="card">
-                <img src="/Images/Vector (1).png" alt="web design icon">
+                <img src="Vector (1).png" alt="web design icon">
                 <h2>Web Design</h2>
             </div>
             <div class="card">
-                <img src="/Images/Vector (2).png" alt="Graphics icon">
+                <img src="Vector (2).png" alt="Graphics icon">
                 <h2>Graphics Designer</h2>
             </div>
         </div>
